int 계산기 로직

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             android:layout_weight="1"
             android:background="@drawable/btn_frame"
             android:gravity="center"
-            android:text="+"
+            android:text="*"
             android:textSize="40sp"
             android:textStyle="bold" />
 
