--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:background="@drawable/btn_frame"
-        android:text="이전 기록 보기"
+        android:text="@string/main_record"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_mainToRecord" />
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -52,7 +53,6 @@
             android:gravity="center"
             android:text="+"
             android:textSize="40sp"
-
             android:textStyle="bold" />
 
         <TextView
