--- a/app/src/main/res/layout/record_rv_item.xml
+++ b/app/src/main/res/layout/record_rv_item.xml
@@ -3,10 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="30dp"
+    android:background="@drawable/btn_frame"
+    android:layout_marginVertical="10dp"
     >
 
     <TextView
-        android:background="@drawable/btn_frame"
+
         android:layout_margin="10dp"
         android:id="@+id/rv_item"
         android:textSize="20sp"
