--- a/app/src/main/res/layout/record_rv_item.xml
+++ b/app/src/main/res/layout/record_rv_item.xml
@@ -4,18 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="30dp"
-    android:background="@drawable/btn_frame"
     android:layout_marginVertical="10dp"
-    >
+    android:background="@drawable/btn_frame">
 
     <TextView
-        android:layout_margin="10dp"
         android:id="@+id/rv_item"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/rv_item_drag"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/btn_frame"
+        android:src="@drawable/menu"
+        android:layout_marginRight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
